--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
+		"@spotify/web-api-ts-sdk": "^1.2.0",
 		"axios": "^1.7.7",
-		"cheerio": "^1.0.0"
+		"cheerio": "^1.0.0",
+		"open": "^10.1.0"
 	}
 }
