--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@spotify/web-api-ts-sdk": "^1.2.0",
 		"axios": "^1.7.7",
 		"cheerio": "^1.0.0",
+		"dayjs": "^1.11.13",
 		"open": "^10.1.0"
 	}
 }
